Run linter on client

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,9 @@
     <title>MARS</title>
   </head>
   <body>
-    <noscript> You need to enable JavaScript to run this application. </noscript>
+    <noscript>
+      You need to enable JavaScript to run this application.
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
