--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>MARS</title>
+    <title>reusable.bio 🔬</title>
   </head>
   <body>
     <noscript>
