MARS-1004 Rebrand to Storacuity
* Begin server migration

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>MARS (reusable.bio) 🔬</title>
+    <title>Storacuity</title>
   </head>
   <body>
     <noscript>
